--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Weather</string>
+    <string name="app_name">简单天气</string>
+    <string name="version">version 1.0</string>
 </resources>
